src/test/deca/context/valid/return/this_in_method_type_ok.deca
// Description :
//    Utilisation de 'this' dans une méthode pour accéder à un champ.
//
// Resultats :
//    OK

class A {
    int x;

    int getX() {
        return this.x;
    }
}

{
    A a = new A();
    println(a.getX());
}

